--- a/APM/src/app/products/product-list.component.html
+++ b/APM/src/app/products/product-list.component.html
@@ -37,7 +37,7 @@
                             [title]='product.productName' 
                             [style.width.px]='imageWidth' 
                             [style.margin.px]='imageMargin'/></td>
-                    <td>{{product.productName}}</td>
+                    <td><a [routerLink]="['/products',product.productId]"> {{product.productName}}</a></td>
                     <td>{{product.productCode | lowercase | convertToSpaces: '-'}}</td>
                     <td>{{product.description}}</td>
                     <td>{{product.price | currency: 'BRL'}}</td>  
